<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ColetarDados5">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/tipo5" />

    <TableLayout
        android:id="@+id/tableLayoutE5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5">

    <TableRow
        android:id="@+id/tableRowE1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/textView5b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tipo5Altura" />

        <EditText
        android:id="@+id/editText5Altura"
        android:layout_width="80sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRowE2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        android:id="@+id/textView5b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tipo5Comprimento"/>

        <EditText
        android:id="@+id/editText5Comprimento"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowE3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/textView5b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tipo5Largura" />

        <EditText
        android:id="@+id/editText5Largura"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal" />
    </TableRow>

        <TableRow
            android:id="@+id/tableRowE4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo5Pacotes" />

            <EditText
                android:id="@+id/editText5Pacotes"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1"
                android:inputType="number" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn5Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCancelar"
        app:layout_constraintStart_toStartOf="@+id/tableLayoutE5"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutE5" />

    <Button
        android:id="@+id/btn5Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutE5" />

</android.support.constraint.ConstraintLayout>