<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ColetarDados6">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/tipo6" />

    <TableLayout
        android:id="@+id/tableLayoutE6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6">

        <TableRow
            android:id="@+id/tableRowE61"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo6Altura" />

            <EditText
                android:id="@+id/editText6Altura"
                android:layout_width="80sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowE62"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView6b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo6Comprimento"/>

            <EditText
                android:id="@+id/editText6Comprimento"
                android:layout_width="80sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowE63"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo6Largura" />

            <EditText
                android:id="@+id/editText6Largura"
                android:layout_width="80sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn6Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCancelar"
        app:layout_constraintStart_toStartOf="@+id/tableLayoutE6"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutE6" />

    <Button
        android:id="@+id/btn6Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutE6" />


</android.support.constraint.ConstraintLayout>